src/parser.output
Terminals which are not used

   TOKEN_FOR
   TOKEN_REQUIRES
   TOKEN_ENSURE
   TOKEN_HASH
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: opt_newlines statement_list

    2 opt_newlines: /* empty */
    3             | opt_newlines TOKEN_NEWLINE

    4 statement_list: statement
    5               | statement_list statement
    6               | statement_list TOKEN_NEWLINE

    7 statement: simple_stmt TOKEN_NEWLINE
    8          | compound_stmt

    9 simple_stmt: sensor_decl
   10            | output_decl
   11            | var_decl
   12            | let_decl
   13            | return_stmt
   14            | invariant_decl
   15            | emit_decl
   16            | extern_decl
   17            | unsafe_block
   18            | transition_decl
   19            | assignment

   20 compound_stmt: rule_decl
   21              | if_stmt
   22              | every_decl
   23              | fn_decl
   24              | machine_decl
   25              | state_decl
   26              | on_enter_decl
   27              | init_decl

   28 suite: TOKEN_NEWLINE TOKEN_INDENT statement_list TOKEN_DEDENT

   29 assignment: TOKEN_IDENTIFIER TOKEN_ASSIGN expr

   30 sensor_decl: TOKEN_SENSOR TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_IDENTIFIER opt_range opt_poll
   31            | TOKEN_SENSOR TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_LPAREN expr TOKEN_RPAREN TOKEN_ARROW type_expr opt_poll

   32 output_decl: TOKEN_OUTPUT TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_IDENTIFIER opt_state

   33 opt_range: /* empty */
   34          | TOKEN_RANGE expr TOKEN_DOT TOKEN_DOT expr

   35 opt_poll: /* empty */
   36         | TOKEN_AT TOKEN_IDENTIFIER TOKEN_ASSIGN expr

   37 opt_state: /* empty */
   38          | TOKEN_ON
   39          | TOKEN_OFF

   40 var_decl: TOKEN_VAR TOKEN_IDENTIFIER TOKEN_COLON type_expr TOKEN_ASSIGN expr
   41         | TOKEN_VAR TOKEN_IDENTIFIER TOKEN_COLON TOKEN_LBRACKET type_expr TOKEN_SEMICOLON TOKEN_INTEGER TOKEN_RBRACKET TOKEN_ASSIGN TOKEN_LBRACKET expr TOKEN_SEMICOLON TOKEN_INTEGER TOKEN_RBRACKET

   42 let_decl: TOKEN_LET TOKEN_IDENTIFIER TOKEN_ASSIGN expr

   43 type_expr: TOKEN_IDENTIFIER
   44          | TOKEN_FIXED TOKEN_LT TOKEN_IDENTIFIER TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_GT

   45 rule_decl: TOKEN_RULE TOKEN_STRING TOKEN_COLON suite

   46 if_stmt: TOKEN_IF expr TOKEN_COLON suite opt_else

   47 opt_else: /* empty */
   48         | TOKEN_ELSE TOKEN_COLON suite
   49         | TOKEN_ELSE TOKEN_IF expr TOKEN_COLON suite opt_else

   50 every_decl: TOKEN_EVERY expr TOKEN_COLON suite

   51 fn_decl: TOKEN_FN TOKEN_IDENTIFIER TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ARROW type_expr TOKEN_COLON suite

   52 param_list: /* empty */
   53           | param
   54           | param_list TOKEN_COMMA param

   55 param: TOKEN_IDENTIFIER TOKEN_COLON type_expr

   56 return_stmt: TOKEN_RETURN expr
   57            | TOKEN_RETURN

   58 machine_decl: TOKEN_MACHINE TOKEN_IDENTIFIER TOKEN_COLON suite

   59 state_decl: TOKEN_STATE TOKEN_IDENTIFIER TOKEN_COLON suite
   60           | TOKEN_INITIAL TOKEN_STATE TOKEN_IDENTIFIER TOKEN_COLON suite

   61 on_enter_decl: TOKEN_ON_ENTER TOKEN_COLON suite

   62 transition_decl: TOKEN_TRANSITION TOKEN_TO TOKEN_IDENTIFIER TOKEN_WHEN expr
   63                | TOKEN_TRANSITION TOKEN_TO TOKEN_IDENTIFIER TOKEN_AFTER expr

   64 invariant_decl: TOKEN_INVARIANT TOKEN_STRING TOKEN_COLON expr

   65 emit_decl: TOKEN_EMIT TOKEN_IDENTIFIER TOKEN_LPAREN expr_list TOKEN_RPAREN TOKEN_TO TOKEN_IDENTIFIER TOKEN_LPAREN TOKEN_STRING TOKEN_RPAREN

   66 init_decl: TOKEN_INIT TOKEN_COLON suite

   67 extern_decl: TOKEN_EXTERN TOKEN_STRING TOKEN_FN TOKEN_IDENTIFIER TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ARROW type_expr

   68 unsafe_block: TOKEN_UNSAFE TOKEN_LBRACE TOKEN_STRING TOKEN_RBRACE

   69 expr: primary_expr
   70     | expr TOKEN_PLUS expr
   71     | expr TOKEN_MINUS expr
   72     | expr TOKEN_STAR expr
   73     | expr TOKEN_SLASH expr
   74     | expr TOKEN_PERCENT expr
   75     | expr TOKEN_LT expr
   76     | expr TOKEN_GT expr
   77     | expr TOKEN_LTE expr
   78     | expr TOKEN_GTE expr
   79     | expr TOKEN_EQ expr
   80     | expr TOKEN_NEQ expr
   81     | TOKEN_NOT expr
   82     | TOKEN_MINUS expr
   83     | TOKEN_IDENTIFIER TOKEN_QUESTION
   84     | expr TOKEN_IS TOKEN_IDENTIFIER
   85     | expr TOKEN_IS TOKEN_ON
   86     | expr TOKEN_IS TOKEN_OFF

   87 primary_expr: TOKEN_IDENTIFIER
   88             | TOKEN_INTEGER
   89             | TOKEN_FLOAT
   90             | TOKEN_ON
   91             | TOKEN_OFF
   92             | TOKEN_MS
   93             | TOKEN_TRUE
   94             | TOKEN_FALSE
   95             | TOKEN_LPAREN expr TOKEN_RPAREN
   96             | TOKEN_IDENTIFIER TOKEN_LPAREN expr_list TOKEN_RPAREN

   97 expr_list: expr
   98          | expr_list TOKEN_COMMA expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_SENSOR (258) 30 31
TOKEN_OUTPUT (259) 32
TOKEN_VAR (260) 40 41
TOKEN_LET (261) 42
TOKEN_RULE (262) 45
TOKEN_IF (263) 46 49
TOKEN_ELSE (264) 48 49
TOKEN_FOR (265)
TOKEN_EVERY (266) 50
TOKEN_FN (267) 51 67
TOKEN_RETURN (268) 56 57
TOKEN_MACHINE (269) 58
TOKEN_STATE (270) 59 60
TOKEN_INIT (271) 66
TOKEN_UNSAFE (272) 68
TOKEN_INVARIANT (273) 64
TOKEN_REQUIRES (274)
TOKEN_ENSURE (275)
TOKEN_EMIT (276) 65
TOKEN_EXTERN (277) 67
TOKEN_INITIAL (278) 60
TOKEN_TRANSITION (279) 62 63
TOKEN_ON_ENTER (280) 61
TOKEN_WHEN (281) 62
TOKEN_AFTER (282) 63
TOKEN_ON (283) 38 85 90
TOKEN_OFF (284) 39 86 91
TOKEN_AT (285) 36
TOKEN_ARROW (286) 31 51 67
TOKEN_RANGE (287) 34
TOKEN_QUESTION (288) 83
TOKEN_COLON (289) 40 41 45 46 48 49 50 51 55 58 59 60 61 64 66
TOKEN_ASSIGN (290) 29 36 40 41 42
TOKEN_LPAREN (291) 31 51 65 67 95 96
TOKEN_RPAREN (292) 31 51 65 67 95 96
TOKEN_LBRACE (293) 68
TOKEN_RBRACE (294) 68
TOKEN_LBRACKET (295) 41
TOKEN_RBRACKET (296) 41
TOKEN_SEMICOLON (297) 41
TOKEN_COMMA (298) 44 54 98
TOKEN_DOT (299) 34
TOKEN_PLUS (300) 70
TOKEN_MINUS (301) 71 82
TOKEN_STAR (302) 72
TOKEN_SLASH (303) 73
TOKEN_PERCENT (304) 74
TOKEN_NOT (305) 81
TOKEN_LT (306) 44 75
TOKEN_GT (307) 44 76
TOKEN_LTE (308) 77
TOKEN_GTE (309) 78
TOKEN_EQ (310) 79
TOKEN_NEQ (311) 80
TOKEN_HASH (312)
TOKEN_FIXED (313) 44
TOKEN_TO (314) 62 63 65
TOKEN_IS (315) 84 85 86
TOKEN_TRUE (316) 93
TOKEN_FALSE (317) 94
TOKEN_NEWLINE (318) 3 6 7 28
TOKEN_INDENT (319) 28
TOKEN_DEDENT (320) 28
TOKEN_INTEGER (321) 41 88
TOKEN_MS (322) 92
TOKEN_FLOAT (323) 89
TOKEN_IDENTIFIER (324) 29 30 31 32 36 40 41 42 43 44 51 55 58 59 60
    62 63 65 67 83 84 87 96
TOKEN_STRING (325) 45 64 65 67 68
TOKEN_ERROR (326)
TOKEN_UMINUS (327)


Nonterminals, with rules where they appear

$accept (73)
    on left: 0
program (74)
    on left: 1, on right: 0
opt_newlines (75)
    on left: 2 3, on right: 1 3
statement_list (76)
    on left: 4 5 6, on right: 1 5 6 28
statement (77)
    on left: 7 8, on right: 4 5
simple_stmt (78)
    on left: 9 10 11 12 13 14 15 16 17 18 19, on right: 7
compound_stmt (79)
    on left: 20 21 22 23 24 25 26 27, on right: 8
suite (80)
    on left: 28, on right: 45 46 48 49 50 51 58 59 60 61 66
assignment (81)
    on left: 29, on right: 19
sensor_decl (82)
    on left: 30 31, on right: 9
output_decl (83)
    on left: 32, on right: 10
opt_range (84)
    on left: 33 34, on right: 30
opt_poll (85)
    on left: 35 36, on right: 30 31
opt_state (86)
    on left: 37 38 39, on right: 32
var_decl (87)
    on left: 40 41, on right: 11
let_decl (88)
    on left: 42, on right: 12
type_expr (89)
    on left: 43 44, on right: 31 40 41 51 55 67
rule_decl (90)
    on left: 45, on right: 20
if_stmt (91)
    on left: 46, on right: 21
opt_else (92)
    on left: 47 48 49, on right: 46 49
every_decl (93)
    on left: 50, on right: 22
fn_decl (94)
    on left: 51, on right: 23
param_list (95)
    on left: 52 53 54, on right: 51 54 67
param (96)
    on left: 55, on right: 53 54
return_stmt (97)
    on left: 56 57, on right: 13
machine_decl (98)
    on left: 58, on right: 24
state_decl (99)
    on left: 59 60, on right: 25
on_enter_decl (100)
    on left: 61, on right: 26
transition_decl (101)
    on left: 62 63, on right: 18
invariant_decl (102)
    on left: 64, on right: 14
emit_decl (103)
    on left: 65, on right: 15
init_decl (104)
    on left: 66, on right: 27
extern_decl (105)
    on left: 67, on right: 16
unsafe_block (106)
    on left: 68, on right: 17
expr (107)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
   , on right: 29 31 34 36 40 41 42 46 49 50 56 62 63 64 70 71 72 73
    74 75 76 77 78 79 80 81 82 84 85 86 95 97 98
primary_expr (108)
    on left: 87 88 89 90 91 92 93 94 95 96, on right: 69
expr_list (109)
    on left: 97 98, on right: 65 96 98


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (opt_newlines)

    program       go to state 1
    opt_newlines  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: opt_newlines . statement_list
    3 opt_newlines: opt_newlines . TOKEN_NEWLINE

    TOKEN_SENSOR      shift, and go to state 4
    TOKEN_OUTPUT      shift, and go to state 5
    TOKEN_VAR         shift, and go to state 6
    TOKEN_LET         shift, and go to state 7
    TOKEN_RULE        shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_EVERY       shift, and go to state 10
    TOKEN_FN          shift, and go to state 11
    TOKEN_RETURN      shift, and go to state 12
    TOKEN_MACHINE     shift, and go to state 13
    TOKEN_STATE       shift, and go to state 14
    TOKEN_INIT        shift, and go to state 15
    TOKEN_UNSAFE      shift, and go to state 16
    TOKEN_INVARIANT   shift, and go to state 17
    TOKEN_EMIT        shift, and go to state 18
    TOKEN_EXTERN      shift, and go to state 19
    TOKEN_INITIAL     shift, and go to state 20
    TOKEN_TRANSITION  shift, and go to state 21
    TOKEN_ON_ENTER    shift, and go to state 22
    TOKEN_NEWLINE     shift, and go to state 23
    TOKEN_IDENTIFIER  shift, and go to state 24

    statement_list   go to state 25
    statement        go to state 26
    simple_stmt      go to state 27
    compound_stmt    go to state 28
    assignment       go to state 29
    sensor_decl      go to state 30
    output_decl      go to state 31
    var_decl         go to state 32
    let_decl         go to state 33
    rule_decl        go to state 34
    if_stmt          go to state 35
    every_decl       go to state 36
    fn_decl          go to state 37
    return_stmt      go to state 38
    machine_decl     go to state 39
    state_decl       go to state 40
    on_enter_decl    go to state 41
    transition_decl  go to state 42
    invariant_decl   go to state 43
    emit_decl        go to state 44
    init_decl        go to state 45
    extern_decl      go to state 46
    unsafe_block     go to state 47


state 3

    0 $accept: program $end .

    $default  accept


state 4

   30 sensor_decl: TOKEN_SENSOR . TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_IDENTIFIER opt_range opt_poll
   31            | TOKEN_SENSOR . TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_LPAREN expr TOKEN_RPAREN TOKEN_ARROW type_expr opt_poll

    TOKEN_IDENTIFIER  shift, and go to state 48


state 5

   32 output_decl: TOKEN_OUTPUT . TOKEN_IDENTIFIER TOKEN_IDENTIFIER TOKEN_IDENTIFIER opt_state

    TOKEN_IDENTIFIER  shift, and go to state 49


state 6

   40 var_decl: TOKEN_VAR . TOKEN_IDENTIFIER TOKEN_COLON type_expr TOKEN_ASSIGN expr
   41         | TOKEN_VAR . TOKEN_IDENTIFIER TOKEN_COLON TOKEN_LBRACKET type_expr TOKEN_SEMICOLON TOKEN_INTEGER TOKEN_RBRACKET TOKEN_ASSIGN TOKEN_LBRACKET expr TOKEN_SEMICOLON TOKEN_INTEGER TOKEN_RBRACKET

    TOKEN_IDENTIFIER  shift, and go to state 50


state 7

   42 let_decl: TOKEN_LET . TOKEN_IDENTIFIER TOKEN_ASSIGN expr

    TOKEN_IDENTIFIER  shift, and go to state 51


state 8

   45 rule_decl: TOKEN_RULE . TOKEN_STRING TOKEN_COLON suite

    TOKEN_STRING  shift, and go to state 52


state 9

   46 if_stmt: TOKEN_IF . expr TOKEN_COLON suite opt_else

    TOKEN_ON          shift, and go to state 53
    TOKEN_OFF         shift, and go to state 54
    TOKEN_LPAREN      shift, and go to state 55
    TOKEN_MINUS       shift, and go to state 56
    TOKEN_NOT         shift, and go to state 57
    TOKEN_TRUE        shift, and go to state 58
    TOKEN_FALSE       shift, and go to state 59
    TOKEN_INTEGER     shift, and go to state 60
    TOKEN_MS          shift, and go to state 61
    TOKEN_FLOAT       shift, and go to state 62
    TOKEN_IDENTIFIER  shift, and go to state 63

    expr          go to state 64
    primary_expr  go to state 65


state 10

   50 every_decl: TOKEN_EVERY . expr TOKEN_COLON suite

    TOKEN_ON          shift, and go to state 53
    TOKEN_OFF         shift, and go to state 54
    TOKEN_LPAREN      shift, and go to state 55
    TOKEN_MINUS       shift, and go to state 56
    TOKEN_NOT         shift, and go to state 57
    TOKEN_TRUE        shift, and go to state 58
    TOKEN_FALSE       shift, and go to state 59
    TOKEN_INTEGER     shift, and go to state 60
    TOKEN_MS          shift, and go to state 61
    TOKEN_FLOAT       shift, and go to state 62
    TOKEN_IDENTIFIER  shift, and go to state 63

    expr          go to state 66
    primary_expr  go to state 65


state 11

   51 fn_decl: TOKEN_FN . TOKEN_IDENTIFIER TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ARROW type_expr TOKEN_COLON suite

    TOKEN_IDENTIFIER  shift, and go to state 67


state 12

   56 return_stmt: TOKEN_RETURN . expr
   57            | TOKEN_RETURN .

    TOKEN_ON          shift, and go to state 53
    TOKEN_OFF         shift, and go to state 54
    TOKEN_LPAREN      shift, and go to state 55
    TOKEN_MINUS       shift, and go to state 56
    TOKEN_NOT         shift, and go to state 57
    TOKEN_TRUE        shift, and go to state 58
    TOKEN_FALSE       shift, and go to state 59
    TOKEN_INTEGER     shift, and go to state 60
    TOKEN_MS          shift, and go to state 61
    TOKEN_FLOAT       shift, and go to state 62
    TOKEN_IDENTIFIER  shift, and go to state 63

    $default  reduce using rule 57 (return_stmt)

    expr          go to state 68
    primary_expr  go to state 65


state 13

   58 machine_decl: TOKEN_MACHINE . TOKEN_IDENTIFIER TOKEN_COLON suite

    TOKEN_IDENTIFIER  shift, and go to state 69


state 14

   59 state_decl: TOKEN_STATE . TOKEN_IDENTIFIER TOKEN_COLON suite

    TOKEN_IDENTIFIER  shift, and go to state 70


state 15

   66 init_decl: TOKEN_INIT . TOKEN_COLON suite

    TOKEN_COLON  shift, and go to state 71


state 16

   68 unsafe_block: TOKEN_UNSAFE . TOKEN_LBRACE TOKEN_STRING TOKEN_RBRACE

    TOKEN_LBRACE  shift, and go to state 72


state 17

   64 invariant_decl: TOKEN_INVARIANT . TOKEN_STRING TOKEN_COLON expr

    TOKEN_STRING  shift, and go to state 73


state 18

   65 emit_decl: TOKEN_EMIT . TOKEN_IDENTIFIER TOKEN_LPAREN expr_list TOKEN_RPAREN TOKEN_TO TOKEN_IDENTIFIER TOKEN_LPAREN TOKEN_STRING TOKEN_RPAREN

    TOKEN_IDENTIFIER  shift, and go to state 74


state 19

   67 extern_decl: TOKEN_EXTERN . TOKEN_STRING TOKEN_FN TOKEN_IDENTIFIER TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ARROW type_expr

    TOKEN_STRING  shift, and go to state 75


state 20

   60 state_decl: TOKEN_INITIAL . TOKEN_STATE TOKEN_IDENTIFIER TOKEN_COLON suite

    TOKEN_STATE  shift, and go to state 76


state 21

   62 transition_decl: TOKEN_TRANSITION . TOKEN_TO TOKEN_IDENTIFIER TOKEN_WHEN expr
   63                | TOKEN_TRANSITION . TOKEN_TO TOKEN_IDENTIFIER TOKEN_AFTER expr

    TOKEN_TO  shift, and go to state 77


state 22

   61 on_enter_decl: TOKEN_ON_ENTER . TOKEN_COLON suite

    TOKEN_COLON  shift, and go to state 78


state 23

    3 opt_newlines: opt_newlines TOKEN_NEWLINE .

    $default  reduce using rule 3 (opt_newlines)


state 24

   29 assignment: TOKEN_IDENTIFIER . TOKEN_ASSIGN expr

    TOKEN_ASSIGN  shift, and go to state 79


state 25

    1 program: opt_newlines statement_list .
    5 statement_list: statement_list . statement
    6               | statement_list . TOKEN_NEWLINE

    TOKEN_SENSOR      shift, and go to state 4
    TOKEN_OUTPUT      shift, and go to state 5
    TOKEN_VAR         shift, and go to state 6
    TOKEN_LET         shift, and go to state 7
    TOKEN_RULE        shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_EVERY       shift, and go to state 10
    TOKEN_FN          shift, and go to state 11
    TOKEN_RETURN      shift, and go to state 12
    TOKEN_MACHINE     shift, and go to state 13
    TOKEN_STATE       shift, and go to state 14
    TOKEN_INIT        shift, and go to state 15
    TOKEN_UNSAFE      shift, and go to state 16
    TOKEN_INVARIANT   shift, and go to state 17
    TOKEN_EMIT        shift, and go to state 18
    TOKEN_EXTERN      shift, and go to state 19
    TOKEN_INITIAL     shift, and go to state 20
    TOKEN_TRANSITION  shift, and go to state 21
    TOKEN_ON_ENTER    shift, and go to state 22
    TOKEN_NEWLINE     shift, and go to state 80
    TOKEN_IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 1 (program)
